--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,18 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.24.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<version>10.1.24</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<version>10.1.24</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>benson</finalName>
